samples/_failures_safe/1761264561_3a72cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b2824ae.c: In function ‘main’:
./samples/SAFE/__tmp_3b2824ae.c:179:19: error: expected ‘)’ at end of input
  179 |         if (tokens
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_3b2824ae.c:179:9: error: expected declaration or statement at end of input
  179 |         if (tokens
      |         ^~
./samples/SAFE/__tmp_3b2824ae.c:179:9: error: expected declaration or statement at end of input
